[package]
name = "adventofrust2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
either = "1.8.0"
vfs = "0.8.0"
transpose = "0.2.2"
paste = "1.0.9"
arrayvec = "0.7.2"
petgraph = "0.6.2"
fixedbitset = "0.4.2"
lazy_static = "1.4.0"
smallstr = "0.3.0"
